Transwer between views and controller - outdated methods

--- a/Vidly1/Views/Movies/Random.cshtml
+++ b/Vidly1/Views/Movies/Random.cshtml
@@ -4,5 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<!--180803 19:50 zamiast używać Model.Name sotsujemy nowe dane na podstawie tego co było w movie controller. Ale to złe podejści, nieistotne. Tak jak wcześniej jest okej-->
+
 <h2>@Model.Name</h2>
 
