Napisano dwie zakładki Customers i Movies zgodnie z ćewiczeniem, ale nie dodano jeszcze linków prowadzących do detali w customers

--- a/Vidly1/Views/Movies/Customers.cshtml
+++ b/Vidly1/Views/Movies/Customers.cshtml
@@ -1,4 +1,6 @@
-﻿@model Vidly1.ViewModels.CustomersViewModel
+﻿@using Vidly1.Models
+@model Vidly1.ViewModels.CustomersViewModel
+
 @{
     ViewBag.Title = "Customers";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,13 +8,14 @@
 
 <h2>Customers</h2>
 
-<table class=“table-bordered”>
+<table class=“table-hover”>
     <tr>
         <th>Customers</th>
     </tr>
     @foreach (var Customer in Model.Customers)
     {
-        <tr><td>@Html.ActionLink(@Customer.Name, "Details", "Customers", 1, null})</td></tr>
+        <tr><td>@Customer.Id</td>
+            <td>@Customer.Name</td></tr>
         
     }
 </table>
