--- a/Vidly1/Views/Shared/_NavBar.cshtml
+++ b/Vidly1/Views/Shared/_NavBar.cshtml
@@ -13,7 +13,7 @@
                 <li>@Html.ActionLink("Random", "Random", "Movies")</li>
                 @*<li>@Html.ActionLink("About", "About", "Home")</li>*@
                 <li>@Html.ActionLink("Customers", "Customers", "Movies")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Movies", "Mov", "Movies")</li>
             </ul>
             </div>
         </div>
